--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.14.11",
     "@testing-library/jest-dom": "^5.17.0",
